syntax = "proto3";

package ebsnapshot;

option go_package = "ebsnapshot/protos";

message SnapshotRecord {
    oneof record {
        SnapshotHeader header = 1;
        BlockList block_list = 2;
        Block block = 3;
    }
}

message SnapshotHeader {
    int32 version = 1;
    string snapshot_id = 2;
    string parent_snapshot_id = 3;
    string volume_id = 4;
    int64 volume_size = 5;
    int32 block_size = 6;
    string description = 7;
    map<string, string> tags = 8;
}

message BlockList {
    repeated int32 blocks = 1;
}

message Block {
    int32 block_index = 1;
    enum ChecksumAlgorithm {
        SHA256 = 0;
    }
    ChecksumAlgorithm checksum_algorithm = 2;
    bytes data_checksum = 3;
    enum Encoding {
        RAW = 0;
        GZIP = 1;
        LZ4 = 2;
    }
    Encoding data_encoding = 4;
    bytes data = 5;
}